fix: wrong font weight

--- a/shoePage/css/_fonts.scss
+++ b/shoePage/css/_fonts.scss
@@ -9,6 +9,11 @@
   font-weight: 300;
 }
 @font-face {
+    font-family: "Montserrat";
+    src: url('../fonts/Montserrat-Regular.ttf');
+    font-weight: 400;
+}
+@font-face {
   font-family: "Montserrat";
   src: url('../fonts/Montserrat-Medium.ttf');
   font-weight: 500;
@@ -16,17 +21,12 @@
 @font-face {
   font-family: "Montserrat";
   src: url('../fonts/Montserrat-SemiBold.ttf');
-  font-weight: 500;
+  font-weight: 600;
 }
 @font-face {
   font-family: "Montserrat";
   src: url('../fonts/Montserrat-Bold.ttf');
   font-weight: 700;
 }
-@font-face {
-    font-family: "Montserrat";
-    src: url('../fonts/Montserrat-Regular.ttf');
-    font-weight: 400;
 
-}
 
